Made it so that every div that is created later in JS has the same general attributes in CSS. Wrote a way to create divs based on an array input 'data' and space them out based on number of elements in that array in the JS file.

--- a/style.css
+++ b/style.css
@@ -20,15 +20,17 @@
   position: relative;
 }
 
-.bars {
+#canvas > div {
+  --left: 0;
   --width: 0;
   --height: 0;
-  --left: 0;
+  --color: '';
+  display: inline-block;
   position: absolute;
   bottom: 0%;
-  left: var(--left);
+  left: calc(var(--left) * 1%);
+  width: var(--width);
   height: var(--height);
-  width: var(--left);
-  background-color: blueviolet;
+  background-color: var(--color);
   transform: translateX(-50%);
 }
