Wrote setBarHeight() function to set the height of each bar based on the height of the highest value in the data array

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   bottom: 0%;
   left: calc(var(--left) * 1%);
   width: var(--width);
-  height: var(--height);
+  height: calc(var(--height) * 1%);
   background-color: var(--color);
   transform: translateX(-50%);
 }
