--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   position: absolute;
   bottom: 0%;
   left: calc(var(--left) * 1%);
-  width: var(--width);
+  width: calc(var(--width) * 1%);
   height: calc(var(--height) * 1%);
   background-color: var(--color);
   transform: translateX(-50%);
