--- a/style.css
+++ b/style.css
@@ -39,5 +39,7 @@
   width: calc(var(--width) * 1%);
   height: calc(var(--height) * 1%);
   background-color: var(--color);
-  transform: translateX(-50%);
+  transform: translateX(-100%);
+  border: 1px dotted white;
+  opacity: 0.9;
 }
